Fix headings not in descending order and contrast radio
Elements not in contrast radio can be impossible for many users to read

--- a/src/style.css
+++ b/src/style.css
@@ -2,11 +2,13 @@
 
     --main-bg-color: #F9FAFC;
     --main: calc(100%);
+    --font-color: #363636;
 }
 
 * {
     font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     line-height: 2;
+    color: var(--font-color);
 }
 
 header {
@@ -50,6 +52,7 @@ main {
     height: var(--main);
     display: flex;
     flex-direction: column;
+    min-width: 568px;
 }
 
 main > * {
@@ -69,7 +72,7 @@ main div ul, ol {
     list-style-position: inside;
 }
 
-main div h3 {
+main div h2 {
     font-size: 2rem;
     font-weight: 550;
 }
